--- a/BackEnd/BackEnd.csproj
+++ b/BackEnd/BackEnd.csproj
@@ -58,13 +58,21 @@
     <Compile Include="Connection.cs" />
     <Compile Include="Models\ActivityModel.cs" />
     <Compile Include="Models\CustomerModel.cs" />
+    <Compile Include="Models\FieldMetadataModel.cs" />
     <Compile Include="Models\InvoiceItemModel.cs" />
     <Compile Include="Models\InvoiceModel.cs" />
+    <Compile Include="Models\ScreenMetadataModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\Contracts\IMongoProvider.cs" />
     <Compile Include="Providers\MongoProvider.cs" />
+    <Compile Include="Services\CollectionService.cs" />
     <Compile Include="Services\Contracts\ICustomerService.cs" />
+    <Compile Include="Services\Contracts\ICollectionService.cs" />
+    <Compile Include="Services\Contracts\IFieldService.cs" />
+    <Compile Include="Services\Contracts\IScreenService.cs" />
     <Compile Include="Services\CustomerService.cs" />
+    <Compile Include="Services\FieldService.cs" />
+    <Compile Include="Services\ScreenService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
