--- a/ScreenWizard/ScreenWizard.csproj
+++ b/ScreenWizard/ScreenWizard.csproj
@@ -208,6 +208,7 @@
     <Compile Include="Controllers\CollectionsController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\FieldMetadataController.cs" />
+    <Compile Include="Controllers\InvoiceController.cs" />
     <Compile Include="Controllers\ScreenMetadataController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
